--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flowlity-data-visualization",
   "version": "1.0.0",
   "main": "src/server.ts",
-  "repository": "https://gitlab.com/linkedin-plugin-aizimov/api-template-v2",
+  "repository": "https://github.com/Vbubblery/flowlity-data-visualization",
   "author": "Juncheng <juncheng.zhou@aizimov.com>",
   "license": "MIT",
   "private": true,
@@ -10,10 +10,7 @@
     "prod": "cross-env NODE_ENV=prod ts-node .",
     "start": "cross-env NODE_ENV=dev nodemon . --exec ts-node . -e ts,graphql",
     "test": "cross-env NODE_ENV=test jest",
-    "eslint": "eslint 'src/**' --fix",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
-    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n exampleRefactory"
+    "eslint": "eslint 'src/**' --fix"
   },
   "lint-staged": {
     "src/**": [
@@ -24,19 +21,17 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "apollo-server-koa": "^2.6.7",
-    "class-validator": "^0.9.1",
     "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "graphql": "^14.3.1",
     "jest": "^24.8.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
-    "pg": "^7.11.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
-    "dotenv": "^8.0.0",
-    "typeorm": "^0.2.18",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
@@ -46,6 +41,7 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__cors": "^2.2.3",
     "@types/node": "^12.0.8",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "eslint-config-google": "^0.13.0",
@@ -54,8 +50,8 @@
     "husky": "^2.4.1",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^8.2.1",
-    "prettier": "^1.18.2",
     "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
     "ts-jest": "^24.0.2"
   },
   "husky": {
