--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prod": "cross-env NODE_ENV=prod ts-node .",
     "start": "cross-env NODE_ENV=dev nodemon . --exec ts-node . -e ts,graphql",
     "test": "cross-env NODE_ENV=test jest",
-    "eslint": "eslint 'src/**' --fix"
+    "eslint": "eslint src/** --fix"
   },
   "lint-staged": {
     "src/**": [
@@ -21,6 +21,7 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "apollo-server-koa": "^2.6.7",
+    "class-validator": "^0.10.0",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
@@ -28,10 +29,11 @@
     "jest": "^24.8.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "lodash": "^4.17.15",
+    "node-json-db": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.2",
-    "uuid": "^3.3.3"
+    "typescript": "3.5.2"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
@@ -41,6 +43,7 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__cors": "^2.2.3",
     "@types/node": "^12.0.8",
+    "@types/node-json-db": "^0.0.1",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
